Add body section

--- a/index.html
+++ b/index.html
@@ -34,13 +34,26 @@
             <img src="fullcrew.jpeg">
         </div>
     </div>
-    </div>
     <div id="mid-section">
         <h2>Straw Hat Pirate Crew</h2>
-        <img>
-        <img>
-        <img>
-        <img>
+        <div id="img-div">
+            <div>
+                <img src="luffy.jpeg" class="small-image">
+                <p class="img-subtext">Luffy</p>
+            </div>
+            <div>
+                <img src="zoro.jpeg" class="small-image">
+                <p class="img-subtext">Zoro</p>
+            </div>
+            <div>
+                <img src="sanji.jpeg" class="small-image">
+                <p class="img-subtext">Sanji</p>
+            </div>
+            <div>
+                <img src="robin.jpeg" class="small-image">
+                <p class="img-subtext">Robin</p>
+            </div>
+        </div>s
     </div>
     <div id="quote">
         <blockquote>
