Complete landing page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav class="navbar">
 
             <ul class="navbar-links">
-                <li class="nav-item">header link one</li>
-                <li class="nav-item">header link two</li>
-                <li class="nav-item">header link three</li>
+                <li class="nav-item"><a href="#into">Introduction</a></li>
+                <li class="nav-item"><a href="#mid-section">Straw Hat Crew</a></li>
+                <li class="nav-item"><a href="quote-sction">Quote</a></li>
             </ul>
         </nav>
     </header>
@@ -53,22 +53,21 @@
                 <img src="robin.jpeg" class="small-image">
                 <p class="img-subtext">Robin</p>
             </div>
-        </div>s
+        </div>
     </div>
-    <div id="quote">
-        <blockquote>
-            I don't want to become a hero because heroes share their meat.
-            And,I want all the meat for myself.
+    <div id="quote-section">
+        <blockquote id="quote">
+            <p>I like heroes a lot but I don't want to be one.</p>
+            <footer>-Monkey D. Luffy</footer>
         </blockquote>
-        <p>-Monkey D. Luffy</p>
     </div>
     <div id="end-section">
-        <p>If you're hungy eat. If you're bored watch One Piece.</p>
+        <p>If you're hungy, eat. If you're bored, watch One Piece.</p>
         <button>Watch Now</button>
     </div>
-    <div id="footer">
-        copyright
-    </div>
+    <footer id="footer">
+        <p>Copyright &copy;  kniroj-neupane</p>
+    </footer>
 
 
 
